--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,6 +1,6 @@
 <h1>Disclaimer for Future ready talent</h1>
 
-<p>If you require any more information or have any questions about our site's disclaimer, please feel free to contact us by email at pambavenkateswarlu0@gmail.com. Our Disclaimer was generated with the help of the <a href="https://www.disclaimergenerator.net/">Free Disclaimer Generator</a>.</p>
+<p>If you require any more information or have any questions about our site's disclaimer, please feel free to contact us by email at domatirumalarao@gmail.com. Our Disclaimer was generated with the help of the <a href="https://www.disclaimergenerator.net/">Free Disclaimer Generator</a>.</p>
 
 <h2>Disclaimers for organic farmig</h2>
 
