--- a/privacy policy.html
+++ b/privacy policy.html
@@ -8,7 +8,7 @@
 
 <h2>Consent</h2>
 
-<p>Through using our website <span id="W_URL">https://sites.google.com/view/organicfarming-azure/home, you consent to and adhere to the terms of our Privacy Policy.</p>
+<p>Through using our website <span id="W_URL">https://sites.google.com/view/organicfarming-azure/home?authuser=1, you consent to and adhere to the terms of our Privacy Policy.</p>
 
 <h2>Information we collect</h2>
 
